# Millennium-Falcon

./: .gitignore  CMakeLists.txt  README.md  Tutorial.sln
Project1/: Enemy.cpp  Enemy.h  EnemyFire.cpp  EnemyFire.h  Fire.cpp  Fire.h  Project1.vcxproj  Project1.vcxproj.filters  game.cpp  game.h  gameObject.cpp  gameObject.h  main.cpp  player.cpp  player.h  util.cpp  util.h
Project1/x64/Release/: Project1.exe.recipe
Project1/x64/Release/Project1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Project1.lastbuildstate  Project1.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
sgg/lib/: sgg.lib
